--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>mmarkle.github.io</title>
+<title>mmarkle</title>
 <script>
 </script>
 <style>
+h1 {
+text-align: center;
+}
+p {
+font-size: 1em;
+}
 </style>
 </head>
 <body>
