--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>mmarkle</title>
-<script>
-</script>
-<style>
-h1 {
-text-align: center;
-}
-p {
-font-size: 1em;
-}
-</style>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+  <title>mmarkle</title>
+  <script>
+   $(document).ready( function() {
+      
+    });
+  </script>
+  <style>
+    
+  </style>
 </head>
 <body>
-<h1>mmarkle's code playground</h1>
-<p>Nothing here yet</p>
+  <div style="container-fluid">
+    <nav class="navbar navbar-fixed-top">
+      <a class="navbar-brand" href="#">mmarkle</a>
+    </nav>
+    <h1 class="text-center text-primary">mmarkle's code playground</h1>
+    <p>Nothing here yet</p>
+  </div>
 </body>
 </html>
