--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div style="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <a class="navbar-brand" href="#">mmarkle</a>
     </nav>
     <h1 class="text-center text-primary">mmarkle's code playground</h1>
