--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <a class="navbar-brand" href="#">mmarkle</a>
     </nav>
-    <h1 class="text-center text-primary">mmarkle's code playground</h1>
+    <div class="row">
+      <h1 class="text-center text-primary">mmarkle's code playground</h1>
+    </div>
     <p>Nothing here yet</p>
   </div>
 </body>
