--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div style="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top" style="padding-bottom: 50px;">
+    <nav class="navbar navbar-default navbar-fixed-top" style="margin-bottom: 50px;">
       <a class="navbar-brand" href="#">mmarkle</a>
     </nav>
     <div class="row">
