--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 <body>
   <div style="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top" style="margin-bottom: 50px;">
-      <a class="navbar-brand" href="#">mmarkle</a>
-    </nav>
+    <div class="row">
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <a class="navbar-brand" href="#">mmarkle</a>
+      </nav>
+    </div>
     <div class="row">
       <h1 class="text-center text-primary">mmarkle's code playground</h1>
     </div>
