--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
   </style>
 </head>
 <body>
-  <div style="container-fluid">
-    <div class="row">
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <a class="navbar-brand" href="#">mmarkle</a>
-      </nav>
-    </div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <a class="navbar-brand" href="#">mmarkle</a>
+  </nav>
+  <div class="container-fluid">
     <div class="row">
       <h1 class="text-center text-primary">mmarkle's code playground</h1>
     </div>
