--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
-    <a class="navbar-brand" href="#">mmarkle</a>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">mmarkle</a>
+    </div>
   </nav>
   <div class="container-fluid">
     <div class="row">
