--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </div>
   </nav>
   <div class="container-fluid">
-    <div class="row">
+    <div class="jumbotron">
       <h1 class="text-center text-primary">mmarkle's code playground</h1>
+      <p>Nothing here yet</p>
     </div>
-    <p>Nothing here yet</p>
   </div>
 </body>
 </html>
