--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a class="navbar-brand" href="#">mmarkle</a>
     </div>
   </nav>
-  <div class="container-fluid">
+  <div class="container-fluid" style="margin: 75px;">
     <div class="jumbotron">
       <h1 class="text-center text-primary">mmarkle's code playground</h1>
       <p>Nothing here yet</p>
