--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   </nav>
   <div class="container-fluid" style="margin: 75px;">
     <div class="jumbotron">
-      <h1 class="text-center text-primary">mmarkle's code playground</h1>
-      <p>Nothing here yet</p>
+      <p class="text-center">Nothing here yet</p>
     </div>
   </div>
 </body>
