--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">mmarkle</a>
+    <div class="container-fluid">
+      <a class="navbar-brand col-*-offset-2" href="#">mmarkle</a>
     </div>
   </nav>
-  <div class="container-fluid" style="margin: 75px;">
+  <div class="container-fluid" style="margin-top: 75px;">
     <div class="jumbotron">
       <p class="text-center">Nothing here yet</p>
     </div>
