--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand col-lg-offset-2 col-md-offset-2" href="#">mmarkle</a>
+      <p>\t</p>
+      <a class="navbar-brand" href="#">mmarkle</a>
     </div>
   </nav>
   <div class="container-fluid" style="margin-top: 75px;">
