--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-      <p>\t</p>
-      <a class="navbar-brand" href="#">mmarkle</a>
+      <a class="navbar-brand" style="text-indent: 5em;" href="#">mmarkle</a>
     </div>
   </nav>
   <div class="container-fluid" style="margin-top: 75px;">
