--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" style="text-indent: 5em;" href="#">mmarkle</a>
+      <a class="navbar-brand" style="" href="#">mmarkle</a>
+      <ul>
+        <li>Random Dropdown</li>
+        <li>element 1?</li>
+      </ul>
     </div>
   </nav>
   <div class="container-fluid" style="margin-top: 75px;">
