--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" style="" href="#">mmarkle</a>
-      <ul>
-        <li>Random Dropdown</li>
+      <ul class="nav navbar-nav">
+        <li class="dropdown">Random Dropdown</li>
         <li>element 1?</li>
       </ul>
     </div>
