--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
      </a>
       <a class="navbar-brand" style="" href="#">mmarkle</a>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li class="active"><a href="http://mmarkle.github.io">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="/dinosaur/index.html">Dinosaur</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
