--- a/dinosaur/index.html
+++ b/dinosaur/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html i18n-values="dir:textdirection;lang:language" dir="ltr" lang="en" i18n-processed=""><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,
