--- a/marshall-website/index.html
+++ b/marshall-website/index.html
@@ -1,4 +1,56 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  
+    <title>Marshall Maude</title>
+    <meta name="description" content="Marshall Maude is a PLACEHOLDER TEXT"
+    <script>
+     $(document).ready( function() {
+        
+      });
+    </script>
+    <style>
+      body {
+        background-color: @dark-gray;
+      }
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle btn" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
+        <a class="navbar-brand" href="#">mmarkle</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Exhibitions <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">This one</a></li>
+              <li><a href="#">That one</a></li>
+              <li><a href="#">Another one</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Other stuff</a></li>
+          <li><a href="#">Some other stuff</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  </body>
   
 </html>
