--- a/marshall-website/index.html
+++ b/marshall-website/index.html
@@ -17,7 +17,7 @@
     </script>
     <style>
       body {
-        background-color: @dark-gray;
+        background-color: @gray-dark;
       }
       }
     </style>
