--- a/marshall-website/index.html
+++ b/marshall-website/index.html
@@ -18,7 +18,7 @@
     </script>
     <style>
       body {
-        background-color: @gray-dark;
+        background-color: #333333;
       }
     </style>
   </head>
