--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-KM7M4B');</script>
   <!-- End Google Tag Manager -->
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-primary navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle btn" data-toggle="collapse" data-target="#myNavbar">
