--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Page 1-1</a></li>
+              <li><a href="LICENSE">License</a></li>
               <li><a href="#">Page 1-2</a></li>
               <li><a href="#">Page 1-3</a></li>
             </ul>
           </li>
-          <li><a href="#">Page 2</a></li>
-          <li><a href="#">Page 3</a></li>
+          <li><a href="dinosaur/">Dinosaurs</a></li>
+          <li><a href="http://marshallmaude.com/home.swf">A Tenative Website for Marshall</a></li>
         </ul>
       </div>
     </div>
