--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">General<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="LICENSE">License</a></li>
-              <li><a href="#">Page 1-2</a></li>
-              <li><a href="#">Page 1-3</a></li>
+              <li><a href="#">Other_1</a></li>
+              <li><a href="#">Other_2</a></li>
             </ul>
           </li>
           <li><a href="dinosaur/">Dinosaurs</a></li>
