--- a/marshall-website/index.html
+++ b/marshall-website/index.html
@@ -21,7 +21,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="/resume.html">Resume</a>
+            <a class="nav-item nav-link" href="resume.html">Resume</a>
             <a class="nav-item nav-link disabled" href="#">Disabled</a>
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown link</a>
